Create a separate css files for variables, common layout and for each subpages.

--- a/home.html
+++ b/home.html
@@ -9,7 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="home_styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/home.css" />
     <title>Document</title>
   </head>
   <body>
@@ -17,10 +18,10 @@
       <div class="logo">..ibrahim..</div>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Career</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Interests</a></li>
+          <li><a href="#" id="home">Home</a></li>
+          <li><a href="#" id="career">Career</a></li>
+          <li><a href="#" id="projects">Projects</a></li>
+          <li><a href="#" id="interests">Interests</a></li>
         </ul>
       </nav>
     </header>
