First draft of personal pages except for interest section.

--- a/home.html
+++ b/home.html
@@ -11,17 +11,17 @@
     />
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/home.css" />
-    <title>Document</title>
+    <title>Ibrahim's Personal Page - Home</title>
   </head>
   <body>
     <header>
       <div class="logo">..ibrahim..</div>
       <nav>
         <ul>
-          <li><a href="#" id="home">Home</a></li>
-          <li><a href="#" id="career">Career</a></li>
-          <li><a href="#" id="projects">Projects</a></li>
-          <li><a href="#" id="interests">Interests</a></li>
+          <li><a href="./home.html" id="home">Home</a></li>
+          <li><a href="./career.html" id="career">Career</a></li>
+          <li><a href="./projects.html" id="projects">Projects</a></li>
+          <li><a href="./interests.html" id="interests">Interests</a></li>
         </ul>
       </nav>
     </header>
@@ -38,19 +38,19 @@
             actuaries in life insurance and takaful companies with their cash
             flow modeling and reporting needs. You can view my professional
             experience
-            <a href="#">here</a>.
+            <a href="./career.html">here</a>.
           </p>
           <p>
             Through my professional work, I discovered a passion for programming
             and coding. This passion has inspired me to pursue personal projects
             in my free time to further expand my skills and interests. You can
-            explore my personal projects <a href="#">here</a>.
+            explore my personal projects <a href="./projects.html">here</a>.
           </p>
           <p>
             I love swimming and have recently participated in open water
             swimming events and competitions. Check out my past and upcoming
             activities
-            <a href="#">here</a>.
+            <a href="./interests.html">here</a>.
           </p>
           <div class="contact-links">
             <a href="https://github.com/ibrahimcode85" target="_blank">
