Update Career Page to include option to view in standard CV format instead of summary.

--- a/career.html
+++ b/career.html
@@ -26,13 +26,17 @@
       </nav>
     </header>
     <main>
+      <div class="cv-switch">
+        <label for="toggleSwitch">Standard CV view</label>
+        <label class="switch">
+          <input type="checkbox" id="toggleSwitch" />
+          <span class="slider"></span>
+        </label>
+      </div>
       <section class="intro">
         <div class="intro-text">
-          <p>
-            This summary highlights my key skills, the technologies I've
-            utilized, and my work experience. For a detailed CV, click
-            <a href="#">here</a>.
-          </p>
+          This summary highlights my key skills, the technologies I've utilized,
+          and my work experience.
         </div>
       </section>
       <section class="key-skills">
@@ -169,7 +173,7 @@
         </div>
       </section>
       <section class="employment">
-        <div class="title-text">Employment History</div>
+        <div class="title-text">Experience</div>
         <div class="card-employment">
           <!-- <div class="card-employment-table">
             <div class="card-employment-row">
@@ -274,6 +278,335 @@
           </div>
         </div>
       </section>
+      <section class="cv">
+        <div class="title-text">CV</div>
+        <div class="cv-card">
+          <div class="profile-header">
+            <div class="title">
+              IBRAHIM AHMAD | <span class="job-title">ACTUARIAL MANAGER</span>
+            </div>
+            <div class="address">
+              Address: No.121 Jalan Karisma 2/4 Alam Sari, 43000 Kajang,
+              Selangor, Malaysia.
+            </div>
+            <div class="contact">
+              Phone: +6 019 676 8686
+              <span class="sentence-break">|</span> E-Mail:
+              ibrahimahmad.info@gmail.com
+            </div>
+            <div class="intro-text">
+              Actuarial manager with 15 years’ experience in actuarial valuation
+              and reporting in family takaful/life insurance industry
+              <span class="sentence-break">|</span> Demonstrated the ability to
+              apply actuarial theories to develop solutions to various
+              assignments <span class="sentence-break">|</span> Practical
+              experience in the development and maintenance of actuarial model
+              and software.
+            </div>
+          </div>
+
+          <div class="section">
+            <div class="title">Key Skills</div>
+            <ul>
+              <li class="skill">
+                Actuarial Science: Actively pursuing actuarial qualification
+                from the Institute and Faculty of Actuaries (UK). Completed all
+                Core Technical papers.
+              </li>
+              <li class="skill">
+                IT Software:
+                <ul>
+                  <li>
+                    Prophet: 11+ years practical experience from model
+                    development to model review. Experience includes
+                    Asset-Liability Strategy (ALS) library, stochastic
+                    modelling, Prophet API and debugging.
+                  </li>
+                  <li>
+                    Microsoft Excel (with VBA): Practical experience in using
+                    Excel for actuarial modeling and analysis.
+                  </li>
+                  <li>
+                    Python: Practical experience in using Python for process
+                    improvement (automation scripting, Python model as a faster
+                    alternative to Excel).
+                  </li>
+                </ul>
+              </li>
+              <li class="skill">
+                Knowledge of takaful models and takaful surplus distribution
+                process.
+              </li>
+              <li class="skill">
+                Financial reporting (including IFRS17) and analysis.
+              </li>
+            </ul>
+          </div>
+
+          <div class="section">
+            <div class="title">Experience</div>
+            <div class="job">
+              <div class="employer">Zurich Life Insurance Malaysia</div>
+              <div class="job-title">
+                Head – IFRS17 Family Takaful
+                <span class="date"
+                  ><span class="sentence-break">|</span> May 2023 - Sep
+                  2023</span
+                >
+              </div>
+              <div class="job-title">
+                Manager – Actuarial Service Center
+                <span class="date"
+                  ><span class="sentence-break">|</span> Mar 2018 - May
+                  2023</span
+                >
+              </div>
+              <div class="job-scope">Key responsibilities:</div>
+              <ul>
+                <li>
+                  Team lead for the actuarial support to Hong Kong business unit
+                  (BU) including supervision of 4 direct reports.
+                </li>
+                <li>
+                  Preparation of Group quarterly reporting including Market
+                  Consistent Embedded Value (MCEV), Swiss Solvency Test (SST)
+                  and Risk Based Capital (RBC).
+                </li>
+                <li>
+                  Overall IFRS17 implementation which includes the review of
+                  Group IFRS17 requirement, Prophet modelling, system testing,
+                  and financial impact assessment.
+                </li>
+                <li>Provide Prophet modelling support and maintenance.</li>
+              </ul>
+              <div class="job-achievement">Selected achievement:</div>
+              <ul>
+                <li>
+                  Completed the implementation of the IFRS 17 for the Hong Kong
+                  BU, allowing the BU to analyze and report their financials
+                  under the new standard to the Group.
+                </li>
+                <li>
+                  Completed the development of Prophet ALS library, enabling the
+                  Hong Kong BU to migrate their outdated model to the latest ALS
+                  library.
+                </li>
+                <li>
+                  Proposed a Prophet Run automation solution using Python and
+                  Prophet API for further development by the shared service
+                  team. The solution enables Prophet to be run automatically
+                  upon detection of source data and notify user after the
+                  completion of the run (saving resources from low-value manual
+                  work).
+                </li>
+              </ul>
+            </div>
+            <div class="job">
+              <div class="employer">Sun Life Malaysia</div>
+              <div class="job-title">
+                Senior Manager - Valuation & Financial Reporting
+                <span class="date"
+                  ><span class="sentence-break">|</span> Apr 2015 – Jun
+                  2017</span
+                >
+              </div>
+              <div class="job-title">
+                Manager - Valuation & Financial Reporting
+                <span class="date"
+                  ><span class="sentence-break">|</span> Apr 2014 – Mar 2015
+                </span>
+              </div>
+              <div class="job-title">
+                Assistant Manager - Financial Reporting
+                <span class="date"
+                  ><span class="sentence-break">|</span> Oct 2012 – Mar 2014
+                </span>
+              </div>
+              <div class="job-scope">Key responsibilities:</div>
+              <ul>
+                <li>
+                  Overall management of Takaful Valuation team, including
+                  supervision of 4 direct reports.
+                </li>
+                <li>
+                  Review and communicate all aspect of actuarial valuation and
+                  reporting such as – movement of valuation data, movement of
+                  reserves, sources of earnings/surplus, embedded value (EV)/
+                  Value of Inforce (VIF) calculation, valuation report and
+                  financial condition report (FCR).
+                </li>
+                <li>
+                  Review the development and maintenance of various actuarial
+                  models/calculators.
+                </li>
+                <li>
+                  Review and communicate results relevant to risk management of
+                  the company such as – movement of capital adequacy ratio
+                  (under RBC guidelines), stress test report, dynamic solvency
+                  test (part of FCR), individual target capital level and
+                  capital management plan (both under ICAAP guidelines) and
+                  reviewing relevant risk management policies.
+                </li>
+                <li>
+                  Review and communicate actuarial results relevant to
+                  investment management of the company such as –
+                  duration/cash-flow matching (part of ALM) and stress testing
+                  for strategic asset allocation.
+                </li>
+                <li>
+                  Monitor the experience of the company and reviewing the
+                  assumptions used in product pricing.
+                </li>
+                <li>
+                  Review the calculation of surplus rate and monitor the
+                  distribution process.
+                </li>
+              </ul>
+              <div class="job-achievement">Selected achievement:</div>
+              <ul>
+                <li>
+                  Developed the Sources of Earnings (SOE) methodology for
+                  takaful business (based on Canadian GAAP), ensuring consistent
+                  reporting with Sun Life’s group. Awarded the i-Shine award in
+                  Q4 2015 for providing innovative solution for the company’s
+                  reporting requirement.
+                </li>
+                <li>
+                  Developed and monitored the workflow for general takaful
+                  surplus distribution, which allows the company to distribute
+                  its surplus to participants for the first time. Awarded the
+                  i-Shine award in 2013 for demonstrating effective
+                  collaboration with other departments throughout the
+                  distribution process.
+                </li>
+                <li>
+                  Review the calculation of surplus rate and monitor the
+                  distribution process.
+                </li>
+              </ul>
+            </div>
+            <div class="job">
+              <div class="employer">MAA Takaful</div>
+              <div class="job-title">
+                Assistant Manager - Valuation
+                <span class="date"
+                  ><span class="sentence-break">|</span> Jan 2010 – Sep
+                  2012</span
+                >
+              </div>
+              <div class="job-title">
+                Executive - Pricing
+                <span class="date"
+                  ><span class="sentence-break">|</span> Apr 2014 – Mar 2015
+                </span>
+              </div>
+              <div class="job-scope">Key responsibilities:</div>
+              <ul>
+                <li>
+                  Perform various actuarial valuations including reserving,
+                  embedded value, stress testing and capital budgeting project.
+                </li>
+                <li>
+                  Assist in the preparation of financial condition report,
+                  valuation report and other statutory reports.
+                </li>
+                <li>Prophet modeling development and documentation.</li>
+                <li>
+                  All aspect of product development from product pricing and
+                  profit testing, preparation of actuarial product certification
+                  and product presentation papers to Board of Directors and
+                  Shariah Committee. Products include Investment-Linked,
+                  medical, group credit, term and whole life.
+                </li>
+              </ul>
+              <div class="job-achievement">Selected achievement:</div>
+              <ul>
+                <li>
+                  Developed and set-up the company’s first prophet model, which
+                  allows the company to compute its actuarial reserves and
+                  business projection effectively.
+                </li>
+                <li>
+                  Profit-tested and filed 12 products to regulator, which allows
+                  the company to have its initial suite of products. Awarded the
+                  Best Employee of Q3 2009 in recognition of exemplary
+                  performance and outstanding contribution to the company.
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="section">
+            <div class="title">Education</div>
+            <div class="education">
+              <div class="institution">
+                Institute and Faculty of Actuaries, United Kingdom
+                <span class="date"
+                  ><span class="sentence-break">|</span> 2007 - Present</span
+                >
+              </div>
+              <div class="certification">
+                Diploma in Actuarial Techniques (for completion of all 9 Core
+                Technical papers)
+              </div>
+            </div>
+            <div class="education">
+              <div class="institution">
+                University of Southampton, United Kingdom
+                <span class="date"
+                  ><span class="sentence-break">|</span> 2004 - 2007</span
+                >
+              </div>
+              <div class="certification">
+                Bachelor of Science (Hons): Mathematics with Actuarial Studies
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <script>
+      function hideCV() {
+        const cvElement = document.querySelector(".cv");
+        cvElement.style.display = "none";
+      }
+
+      function showCV() {
+        const toggleSwitch = document.querySelector("#toggleSwitch");
+        const cvElement = document.querySelector(".cv");
+
+        // select all non-CV sections
+        const introElement = document.querySelector(".intro");
+        const skillsElement = document.querySelector(".key-skills");
+        const employmentElement = document.querySelector(".employment");
+        const techElement = document.querySelector(".technologies");
+
+        // if checked: hide all non-cv section, display cv section
+        if (toggleSwitch.checked) {
+          cvElement.style.display = "";
+
+          introElement.style.display = "none";
+          skillsElement.style.display = "none";
+          employmentElement.style.display = "none";
+          techElement.style.display = "none";
+        }
+
+        // if un-checked: display non-cv section, hide cv section
+        if (!toggleSwitch.checked) {
+          cvElement.style.display = "none";
+
+          introElement.style.display = "";
+          skillsElement.style.display = "";
+          employmentElement.style.display = "";
+          techElement.style.display = "";
+        }
+      }
+      document
+        .getElementById("toggleSwitch")
+        .addEventListener("change", showCV);
+
+      //hide cv during page-load
+      hideCV();
+    </script>
   </body>
 </html>
