Minor update on style and wordings.

--- a/projects.html
+++ b/projects.html
@@ -28,13 +28,10 @@
     <main>
       <section class="intro">
         <div class="intro-text">
-          <p>
-            I enjoy exploring and working on coding and programming projects in
-            my free time, either developing useful tools or using programming
-            for modelling and analytical purposes. Here is a glimpse of some of
-            the projects I’ve been working on and what I have in mind for future
-            exploration.
-          </p>
+          I enjoy exploring and working on coding and programming projects in my
+          free time, either for developing useful tools or for modelling and
+          analytical purposes. Here is a glimpse of some of the projects I’ve
+          been working on and what I have in mind for future exploration.
         </div>
       </section>
       <section class="self-learning">
