Completed draft for all pages including interest page with its subpages.

--- a/home.html
+++ b/home.html
@@ -34,10 +34,9 @@
         <div class="intro-text">
           <h1>Hi! I'm Ibrahim.</h1>
           <p>
-            I'm an Actuarial Manager with 15 years of experience helping
-            actuaries in life insurance and takaful companies with their cash
-            flow modeling and reporting needs. You can view my professional
-            experience
+            I'm an Actuarial Manager with 15 years of experience helping life
+            actuaries with their cash flow modeling and reporting needs. You can
+            view my professional experience
             <a href="./career.html">here</a>.
           </p>
           <p>
