Apply header responsiveness to all pages. Create main.js file to cater for common header functionality.

--- a/career.html
+++ b/career.html
@@ -566,6 +566,7 @@
         </div>
       </section>
     </main>
+    <script src="./scripts/main.js"></script>
     <script src="./scripts/career.js"></script>
   </body>
 </html>
