Adjust style to be more responsive in smaller screen. Add additional place-holder card, so that the cards always on even number to be placed in two column.

--- a/projects.html
+++ b/projects.html
@@ -303,6 +303,19 @@
               </a>
             </div>
           </div>
+          <div class="card-projects-placeholder">
+            <img
+              src="./assets/Coming_Soon_Picture.jpg"
+              alt="coming soon"
+              class="card-projects-img"
+            />
+            <div class="card-projects-text">
+              <div class="card-projects-header">
+                More Projects to Explore...
+              </div>
+              <p></p>
+            </div>
+          </div>
         </div>
       </section>
       <section class="future-exploration">
