Update styling to make it more responsive in smaller screen.

--- a/interests_subpages/interests_stoosRidgeHike.html
+++ b/interests_subpages/interests_stoosRidgeHike.html
@@ -17,6 +17,7 @@
     <header>
       <div class="logo">..ibrahim..</div>
       <nav>
+        <div class="menu-icon" onclick="toggleMenu()">Menu &#9776;</div>
         <ul>
           <li><a href="../home.html" id="home">Home</a></li>
           <li><a href="../career.html" id="career">Career</a></li>
@@ -84,5 +85,6 @@
         </div>
       </section>
     </main>
+    <script src="../scripts/main.js"></script>
   </body>
 </html>
