Update content for future projects as a simple single-card list.

--- a/projects.html
+++ b/projects.html
@@ -322,39 +322,22 @@
         <div class="title-text">Future Exploration</div>
         <div class="card-future-exploration-wrapper">
           <div class="card-future-exploration">
-            <div class="card-future-exploration-header">
-              Asynchronous programming (including GPU programming)
-            </div>
-            <p>
-              I aim to delve into asynchronous programming to enhance my ability
-              to run computations and processing tasks in parallel. This will
-              enable faster and more efficient processing, especially for
-              large-scale data operations.
-            </p>
-          </div>
-          <div class="card-future-exploration">
-            <div class="card-future-exploration-header">
-              Using OpenAI API to develop AI-powered applications
-            </div>
-            <p>
-              I am keen to explore the capabilities of the OpenAI API to create
-              an AI-driven applications. This includes leveraging natural
-              language processing and other advanced AI functionalities to build
-              smarter and more intuitive software solutions designed to
-              streamline workflows and improve efficiency
-            </p>
-          </div>
-          <div class="card-future-exploration">
-            <div class="card-future-exploration-header">
-              Building a model point generator application
-            </div>
-            <p>
-              My goal is to develop an application for insurance companies that
-              can randomly generate policyholder data. This tool would allow
-              insurers to define distributions and ranges for various profile
-              attributes (e.g., age, gender, sum assured), thus facilitating a
-              more efficient policyholder simulations.
-            </p>
+            <ul>
+              <li>
+                <strong>Topics</strong>
+                <span class="sentence-break">|</span> Python Asynchronous
+                programming, Python GPU programming, OpenAI API.
+              </li>
+              <li>
+                <strong>Development</strong>
+                <span class="sentence-break">|</span> Policyholders' profile
+                generator, using BNM's OpenAPI to create personalised dashboard.
+              </li>
+              <li>
+                <strong>Tools</strong>
+                <span class="sentence-break">|</span> React, Node.js, Azure
+              </li>
+            </ul>
           </div>
         </div>
       </section>
