Setup and create webpack bundle for all pages except for interests page and sub-pages.

--- a/src/career.html
+++ b/src/career.html
@@ -47,9 +47,9 @@
             <div class="card-skills-banner actuarial"></div>
             <div class="card-skills-img-wrapper">
               <img
-                src="assets/career/icon-actuarial-services.png"
                 alt="Card icon to represent actuarial services"
                 class="card-skills-img"
+                id="icon-actuarial-services"
               />
             </div>
             <div class="card-skills-text">
@@ -66,9 +66,9 @@
             <div class="card-skills-banner reporting"></div>
             <div class="card-skills-img-wrapper">
               <img
-                src="assets/career/icon-financial-report.png"
                 alt="The Odin Project logo"
                 class="card-skills-img"
+                id="icon-financial-report"
               />
             </div>
             <div class="card-skills-text">
@@ -86,9 +86,9 @@
             <div class="card-skills-banner prophet"></div>
             <div class="card-skills-img-wrapper">
               <img
-                src="assets/career/icon-prophet-model.png"
                 alt="Icon representing financial reporting"
                 class="card-skills-img"
+                id="icon-prophet-model"
               />
             </div>
             <div class="card-skills-text">
@@ -105,9 +105,9 @@
             <div class="card-skills-banner tools"></div>
             <div class="card-skills-img-wrapper">
               <img
-                src="assets/career/icon-internal-tools.png"
                 alt="Icon representing internal tools development"
                 class="card-skills-img"
+                id="icon-internal-tools"
               />
             </div>
             <div class="card-skills-text">
