--- a/src/home.html
+++ b/src/home.html
@@ -17,7 +17,7 @@
     <header>
       <div class="logo">..ibrahim..</div>
       <nav>
-        <div class="menu-icon" onclick="toggleMenu()">Menu &#9776;</div>
+        <div class="menu-icon">Menu &#9776;</div>
         <ul>
           <li><a href="./home.html" id="home">Home</a></li>
           <li><a href="./career.html" id="career">Career</a></li>
@@ -28,10 +28,7 @@
     </header>
     <main>
       <section class="intro">
-        <img
-          src="assets/home/profile_picture.jpg"
-          alt="Profile Picture of Ibrahim"
-        />
+        <img id="profile-pic" alt="Profile Picture of Ibrahim" />
         <div class="intro-text">
           <h1>Hi! I'm Ibrahim.</h1>
           <p>
@@ -54,16 +51,16 @@
           </p>
           <div class="contact-links">
             <a href="https://github.com/ibrahimcode85" target="_blank">
-              <img src="assets/home/github-mark.png" alt="GitHub" />
+              <img alt="GitHub" id="github-icon" />
             </a>
             <a
               href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
               target="_blank"
             >
-              <img src="assets/home/linkedin-mark.png" alt="LinkedIn" />
+              <img alt="LinkedIn" id="linkedin-icon" />
             </a>
             <a href="mailto:ibrahimahmad.info@gmail.com">
-              <img src="assets/home/email-logo.png" alt="Email" />
+              <img alt="Email" id="email-icon" />
             </a>
           </div>
         </div>
