--- a/src/projects.html
+++ b/src/projects.html
@@ -40,9 +40,9 @@
         <div class="card-learn-wrapper">
           <div class="card-learn">
             <img
-              src="assets/projects/datacamp-svgrepo-com.svg"
               alt="Data Camp logo"
               class="card-learn-img"
+              id="datacamp-svgrepo-com"
             />
             <div class="card-learn-text">
               <div class="card-learn-header">
@@ -62,9 +62,9 @@
           </div>
           <div class="card-learn">
             <img
-              src="assets/projects/TOP-logo2.jpeg"
               alt="The Odin Project logo"
               class="card-learn-img"
+              id="TOP-logo2"
             />
             <div class="card-learn-text">
               <div class="card-learn-header">The Odin Project</div>
@@ -89,9 +89,9 @@
         <div class="card-projects-wrapper">
           <div class="card-projects">
             <img
-              src="./assets/projects/img_website_proj.jpg"
               alt="3D image of cashflows applications"
               class="card-projects-img"
+              id="img_website_proj"
             />
             <div class="card-projects-text">
               <div class="card-projects-header">
@@ -115,27 +115,21 @@
             </div>
             <div class="card-projects-links">
               <a href="https://github.com/ibrahimcode85" target="_blank">
-                <img
-                  src="assets/home/github-mark.png"
-                  alt="Link to GitHub repository"
-                />
+                <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
                 href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
                 target="_blank"
               >
-                <img
-                  src="assets/projects/web.svg"
-                  alt="Link to personal website"
-                />
+                <img alt="Link to personal website" id="web" />
               </a>
             </div>
           </div>
           <div class="card-projects">
             <img
-              src="./assets/projects/img_personalWeb_projects.jpg"
               alt="personal website"
               class="card-projects-img"
+              id="img_personalWeb_projects"
             />
 
             <div class="card-projects-text">
@@ -158,27 +152,21 @@
             </div>
             <div class="card-projects-links">
               <a href="https://github.com/ibrahimcode85" target="_blank">
-                <img
-                  src="assets/home/github-mark.png"
-                  alt="Link to GitHub repository"
-                />
+                <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
                 href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
                 target="_blank"
               >
-                <img
-                  src="assets/projects/web.svg"
-                  alt="Link to personal website"
-                />
+                <img alt="Link to personal website" id="web" />
               </a>
             </div>
           </div>
           <div class="card-projects">
             <img
-              src="./assets/projects/img_todo_proj.jpg"
               alt="todo application"
               class="card-projects-img"
+              id="img_todo_proj"
             />
 
             <div class="card-projects-text">
@@ -204,27 +192,21 @@
             </div>
             <div class="card-projects-links">
               <a href="https://github.com/ibrahimcode85" target="_blank">
-                <img
-                  src="assets/home/github-mark.png"
-                  alt="Link to GitHub repository"
-                />
+                <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
                 href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
                 target="_blank"
               >
-                <img
-                  src="assets/projects/web.svg"
-                  alt="Link to personal website"
-                />
+                <img alt="Link to personal website" id="web" />
               </a>
             </div>
           </div>
           <div class="card-projects">
             <img
-              src="./assets/projects/img_predictive_proj.jpg"
               alt="todo application"
               class="card-projects-img"
+              id="img_predictive_proj"
             />
 
             <div class="card-projects-text">
@@ -245,27 +227,21 @@
             </div>
             <div class="card-projects-links">
               <a href="https://github.com/ibrahimcode85" target="_blank">
-                <img
-                  src="assets/home/github-mark.png"
-                  alt="Link to GitHub repository"
-                />
+                <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
                 href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
                 target="_blank"
               >
-                <img
-                  src="assets/projects/web.svg"
-                  alt="Link to personal website"
-                />
+                <img alt="Link to personal website" id="web" />
               </a>
             </div>
           </div>
           <div class="card-projects">
             <img
-              src="./assets/projects/img_customer_segmentation_proj.jpg"
               alt="todo application"
               class="card-projects-img"
+              id="img_customer_segmentation_proj"
             />
 
             <div class="card-projects-text">
@@ -287,27 +263,21 @@
             </div>
             <div class="card-projects-links">
               <a href="https://github.com/ibrahimcode85" target="_blank">
-                <img
-                  src="assets/home/github-mark.png"
-                  alt="Link to GitHub repository"
-                />
+                <img alt="Link to GitHub repository" id="github-mark" />
               </a>
               <a
                 href="https://www.linkedin.com/in/ibrahim-ahmad-10690536/"
                 target="_blank"
               >
-                <img
-                  src="assets/projects/web.svg"
-                  alt="Link to personal website"
-                />
+                <img alt="Link to personal website" id="web" />
               </a>
             </div>
           </div>
           <div class="card-projects-placeholder">
             <img
-              src="./assets/Coming_Soon_Picture.jpg"
               alt="coming soon"
               class="card-projects-img"
+              id="Coming_Soon_Picture"
             />
             <div class="card-projects-text">
               <div class="card-projects-header">
